--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -21,3 +21,13 @@
 
 en:
   hello: "Hello world"
+
+#ravi added for errors for photo validation
+  errors:
+    messages:
+      wrong_size: "is the wrong size (should be %{file_size})"
+      size_too_small: "is too small (should be at least %{file_size})"
+      size_too_big: "is too big (should be at most %{file_size})"
+      carrierwave_processing_error: "failed to be processed"
+      carrierwave_integrity_error: "is not an allowed file type"
+      carrierwave_download_error: "Couldn't download image."
