finished image validation error output, need to css it now

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -27,7 +27,10 @@ en:
     messages:
       wrong_size: "is the wrong size (should be %{file_size})"
       size_too_small: "is too small (should be at least %{file_size})"
-      size_too_big: "is too big (should be at most %{file_size})"
+      size_too_big: "is too big (should be less than %{file_size})"
       carrierwave_processing_error: "failed to be processed"
       carrierwave_integrity_error: "is not an allowed file type"
       carrierwave_download_error: "Couldn't download image."
+      extension_white_list_error: "You are not allowed to upload %{extension} files, allowed types: %{allowed_types}"
+      extension_black_list_error: "You are not allowed to upload %{extension} files, prohibited types: %{prohibited_types}"
+      mini_magick_processing_error: "Failed to manipulate with MiniMagick, maybe it is not an image? Original Error: %{e}"
